feat: rename existing system cmd
