# internal/api/ctl/proto.gen.go
@@ -1,4 +1,4 @@
-// forester-controller v0.0.1 a8742b66bbd2857b7c1f40a8322fc74253cf2613
+// forester-controller v0.0.1 9e0ddc9e6d889b67ee1ce7f9bc3b460a7fd12daf
 // --
 // Code generated by webrpc-gen@v0.14.0-dev with golang generator. DO NOT EDIT.
 //
@@ -30,7 +30,7 @@ func WebRPCSchemaVersion() string {
 
 // Schema hash generated from your RIDL schema
 func WebRPCSchemaHash() string {
-	return "a8742b66bbd2857b7c1f40a8322fc74253cf2613"
+	return "9e0ddc9e6d889b67ee1ce7f9bc3b460a7fd12daf"
 }
 
 //
@@ -105,6 +105,7 @@ type ApplianceService interface {
 type SystemService interface {
 	Register(ctx context.Context, system *NewSystem) error
 	Find(ctx context.Context, pattern string) (*System, error)
+	Rename(ctx context.Context, pattern string, newName string) error
 	Acquire(ctx context.Context, systemPattern string, imagePattern string, comment string, snippets []string) error
 	Release(ctx context.Context, systemPattern string) error
 	List(ctx context.Context, limit int64, offset int64) ([]*System, error)
@@ -140,6 +141,7 @@ var WebRPCServices = map[string][]string{
 	"SystemService": {
 		"Register",
 		"Find",
+		"Rename",
 		"Acquire",
 		"Release",
 		"List",
@@ -750,6 +752,8 @@ func (s *systemServiceServer) ServeHTTP(w http.ResponseWriter, r *http.Request) 
 		handler = s.serveRegisterJSON
 	case "/rpc/SystemService/Find":
 		handler = s.serveFindJSON
+	case "/rpc/SystemService/Rename":
+		handler = s.serveRenameJSON
 	case "/rpc/SystemService/Acquire":
 		handler = s.serveAcquireJSON
 	case "/rpc/SystemService/Release":
@@ -867,6 +871,41 @@ func (s *systemServiceServer) serveFindJSON(ctx context.Context, w http.Response
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(http.StatusOK)
 	w.Write(respBody)
+}
+
+func (s *systemServiceServer) serveRenameJSON(ctx context.Context, w http.ResponseWriter, r *http.Request) {
+	ctx = context.WithValue(ctx, MethodNameCtxKey, "Rename")
+
+	reqBody, err := io.ReadAll(r.Body)
+	if err != nil {
+		s.sendErrorJSON(w, r, ErrWebrpcBadRequest.WithCause(fmt.Errorf("failed to read request data: %w", err)))
+		return
+	}
+	defer r.Body.Close()
+
+	reqPayload := struct {
+		Arg0 string `json:"pattern"`
+		Arg1 string `json:"newName"`
+	}{}
+	if err := json.Unmarshal(reqBody, &reqPayload); err != nil {
+		s.sendErrorJSON(w, r, ErrWebrpcBadRequest.WithCause(fmt.Errorf("failed to unmarshal request data: %w", err)))
+		return
+	}
+
+	// Call service method implementation.
+	err = s.SystemService.Rename(ctx, reqPayload.Arg0, reqPayload.Arg1)
+	if err != nil {
+		rpcErr, ok := err.(WebRPCError)
+		if !ok {
+			rpcErr = ErrWebrpcEndpoint.WithCause(err)
+		}
+		s.sendErrorJSON(w, r, rpcErr)
+		return
+	}
+
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(http.StatusOK)
+	w.Write([]byte("{}"))
 }
 
 func (s *systemServiceServer) serveAcquireJSON(ctx context.Context, w http.ResponseWriter, r *http.Request) {
@@ -1592,14 +1631,15 @@ func (c *applianceServiceClient) Delete(ctx context.Context, name string) error 
 
 type systemServiceClient struct {
 	client HTTPClient
-	urls   [9]string
+	urls   [10]string
 }
 
 func NewSystemServiceClient(addr string, client HTTPClient) SystemService {
 	prefix := urlBase(addr) + SystemServicePathPrefix
-	urls := [9]string{
+	urls := [10]string{
 		prefix + "Register",
 		prefix + "Find",
+		prefix + "Rename",
 		prefix + "Acquire",
 		prefix + "Release",
 		prefix + "List",
@@ -1634,6 +1674,15 @@ func (c *systemServiceClient) Find(ctx context.Context, pattern string) (*System
 	return out.Ret0, err
 }
 
+func (c *systemServiceClient) Rename(ctx context.Context, pattern string, newName string) error {
+	in := struct {
+		Arg0 string `json:"pattern"`
+		Arg1 string `json:"newName"`
+	}{pattern, newName}
+	err := doJSONRequest(ctx, c.client, c.urls[2], in, nil)
+	return err
+}
+
 func (c *systemServiceClient) Acquire(ctx context.Context, systemPattern string, imagePattern string, comment string, snippets []string) error {
 	in := struct {
 		Arg0 string   `json:"systemPattern"`
@@ -1641,7 +1690,7 @@ func (c *systemServiceClient) Acquire(ctx context.Context, systemPattern string,
 		Arg2 string   `json:"comment"`
 		Arg3 []string `json:"snippets"`
 	}{systemPattern, imagePattern, comment, snippets}
-	err := doJSONRequest(ctx, c.client, c.urls[2], in, nil)
+	err := doJSONRequest(ctx, c.client, c.urls[3], in, nil)
 	return err
 }
 
@@ -1649,7 +1698,7 @@ func (c *systemServiceClient) Release(ctx context.Context, systemPattern string)
 	in := struct {
 		Arg0 string `json:"systemPattern"`
 	}{systemPattern}
-	err := doJSONRequest(ctx, c.client, c.urls[3], in, nil)
+	err := doJSONRequest(ctx, c.client, c.urls[4], in, nil)
 	return err
 }
 
@@ -1662,7 +1711,7 @@ func (c *systemServiceClient) List(ctx context.Context, limit int64, offset int6
 		Ret0 []*System `json:"systems"`
 	}{}
 
-	err := doJSONRequest(ctx, c.client, c.urls[4], in, &out)
+	err := doJSONRequest(ctx, c.client, c.urls[5], in, &out)
 	return out.Ret0, err
 }
 
@@ -1670,7 +1719,7 @@ func (c *systemServiceClient) BootNetwork(ctx context.Context, systemPattern str
 	in := struct {
 		Arg0 string `json:"systemPattern"`
 	}{systemPattern}
-	err := doJSONRequest(ctx, c.client, c.urls[5], in, nil)
+	err := doJSONRequest(ctx, c.client, c.urls[6], in, nil)
 	return err
 }
 
@@ -1678,7 +1727,7 @@ func (c *systemServiceClient) BootLocal(ctx context.Context, systemPattern strin
 	in := struct {
 		Arg0 string `json:"systemPattern"`
 	}{systemPattern}
-	err := doJSONRequest(ctx, c.client, c.urls[6], in, nil)
+	err := doJSONRequest(ctx, c.client, c.urls[7], in, nil)
 	return err
 }
 
@@ -1690,7 +1739,7 @@ func (c *systemServiceClient) Kickstart(ctx context.Context, systemPattern strin
 		Ret0 string `json:"contents"`
 	}{}
 
-	err := doJSONRequest(ctx, c.client, c.urls[7], in, &out)
+	err := doJSONRequest(ctx, c.client, c.urls[8], in, &out)
 	return out.Ret0, err
 }
 
@@ -1702,7 +1751,7 @@ func (c *systemServiceClient) Logs(ctx context.Context, systemPattern string) ([
 		Ret0 []*LogEntry `json:"logs"`
 	}{}
 
-	err := doJSONRequest(ctx, c.client, c.urls[8], in, &out)
+	err := doJSONRequest(ctx, c.client, c.urls[9], in, &out)
 	return out.Ret0, err
 }
 
