# openapi.gen.yaml
@@ -1,12 +1,15 @@
-# forester-controller v0.0.1 a8742b66bbd2857b7c1f40a8322fc74253cf2613
+# forester-controller v0.0.1 9e0ddc9e6d889b67ee1ce7f9bc3b460a7fd12daf
 # --
 # Code generated by webrpc-gen@v0.14.0-dev with github.com/webrpc/gen-openapi@v0.11.2 generator; DO NOT EDIT
 # 
-# webrpc-gen -silent -schema=internal/api/ctl/controller.ridl -target=github.com/webrpc/gen-openapi@v0.11.2 -out=openapi.gen.yaml
+# webrpc-gen -silent -schema=internal/api/ctl/controller.ridl -target=github.com/webrpc/gen-openapi@v0.11.2 -out=openapi.gen.yaml -title=Forester API -apiVersion=0.0.5 -serverUrl=https://forester.example.com:8000 -serverDescription=Forester service
 openapi: 3.0.0
 info:
-  title: 'ImageService API'
-  version: ''
+  title: 'Forester API'
+  version: '0.0.5'
+servers:
+  - url: 'https://forester.example.com:8000'
+    description: 'Forester service'
 components:
   schemas:
     ErrorWebrpcEndpoint:
@@ -432,6 +435,13 @@ components:
       properties:
         pattern:
           type: string
+    SystemService_Rename_Request:
+      type: object
+      properties:
+        pattern:
+          type: string
+        newName:
+          type: string
     SystemService_Acquire_Request:
       type: object
       properties:
@@ -486,6 +496,8 @@ components:
         system:
           type: object
           $ref: '#/components/schemas/System'
+    SystemService_Rename_Response:
+      type: object
     SystemService_Acquire_Response:
       type: object
     SystemService_Release_Response:
@@ -961,6 +973,40 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/SystemService_Find_Response'
+        '4XX':
+          description: Client error
+          content:
+            application/json:
+              schema:
+                oneOf:
+                - $ref: '#/components/schemas/ErrorWebrpcEndpoint'
+                - $ref: '#/components/schemas/ErrorWebrpcRequestFailed'
+                - $ref: '#/components/schemas/ErrorWebrpcBadRoute'
+                - $ref: '#/components/schemas/ErrorWebrpcBadMethod'
+                - $ref: '#/components/schemas/ErrorWebrpcBadRequest'
+        '5XX':
+          description: Server error
+          content:
+            application/json:
+              schema:
+                oneOf:
+                - $ref: '#/components/schemas/ErrorWebrpcBadResponse'
+                - $ref: '#/components/schemas/ErrorWebrpcServerPanic'
+                - $ref: '#/components/schemas/ErrorWebrpcInternalError'
+  /rpc/SystemService/Rename:
+    post:
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SystemService_Rename_Request'
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SystemService_Rename_Response'
         '4XX':
           description: Client error
           content:
